Fix max-width overflow on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@
 html,
 body {
   margin: 0;
-  background: var(--background-header);
+  background: var(--background-primary);
   height: 100%;
 }
 
@@ -59,22 +59,11 @@ h6 {
 }
 
 main {
+  max-width: 100vw;
   padding: calc(70px + 1rem) 1rem 1rem;
-  background: var(--background-primary);
   flex: 1;
 }
 
-/* html {
-overflow: hidden;
-width: 100%;
-} */
 body {
-/* height: 100%; */
-position: fixed;
-left: 0;
-right: 0;
-top:0;
-bottom: 0;
-/* overflow-y: scroll; */
--webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
